# taste_of_haskell

./: .gitignore  README.md
code/: Grep.hs  Parser.hs  Regex.hs  applicative.hs  cabal.config  demo.cabal  io.hs  syntax-primer.hs  syntax-primer.scala  twitter-grep.hs  twitter.js
presentation/: presentation.html  style.css
