name:                demo
version:             0.1.0.0

build-type:          Simple
cabal-version:       >=1.10

executable demo
  main-is:             twitter_feed.hs

  build-depends:       base >=4.7 && <4.8
                     , scotty
                     , http-conduit 
                     , aeson 
                     , authenticate-oauth
                     , bytestring
                     , text
      
  default-language:    Haskell2010